# C_CPP1

./: .codecov.yml  .travis.yml  CMakeLists.txt  README.md  README.rst  main.c  utils.c  utils.h
include/: utils.h
include/general/: general_functions.h  utils.h
include/parallel/: utils.h
include/serial/: utils.h
include/utils/: utils.h
src/: main.c  time_comparison.c  utils.c
src/general/: general_functions.c  utils.c
src/parallel/: utils.c
src/serial/: utils.c
test/: CMakeLists.txt  file_generator.sh  general_utils.cpp  main.cpp  parallel_utils.cpp  pars_str.cpp  read_str_from_file.cpp  serial_utils.cpp  stress.cpp  utils.cpp
test/generator/: file_generator.cpp  file_generator.sh
